Update 2. basic grammar.md

--- a/Oracle/2. basic grammar.md
+++ b/Oracle/2. basic grammar.md
@@ -2,7 +2,7 @@
 SELECT <col>
    FROM <talbe>
    
-   WHERE <a> = 'str'
-       AND/OR <b> > 15
+   WHERE <col> = 'str'            --예로 col > G 인 경우에는 G보다 큰 H,I,J...Z 로 시작되는 것 걸러진다!
+       AND/OR <num> > 15
    ORDER BY <a> DESC, <b> ASC
 ```
