Update 2. basic grammar.md

--- a/Oracle/2. basic grammar.md
+++ b/Oracle/2. basic grammar.md
@@ -6,3 +6,19 @@ SELECT <col>
        AND/OR <num> > 15
    ORDER BY <a> DESC, <b> ASC
 ```
+
+
+## WHERE 절
+### WHERE OR 조건 여러개 --> IN 으로 묶기
+```sql
+SELECT
+   FROM
+   WHERE JOB = 'MANAGER'
+      OR JOB = 'SALESMAN'
+      OR JOB = 'CLERK';
+```
+```SQL
+SELECT
+   FROM
+   WHERE JOB IN ('MANAGER','SALESMAN','CLERK');
+```
