--- a/Oracle/2. basic grammar.md
+++ b/Oracle/2. basic grammar.md
@@ -21,4 +21,5 @@ SELECT
 SELECT
    FROM
    WHERE JOB IN ('MANAGER','SALESMAN','CLERK');
+   --WHERE JOB NOT IN('MANAGER','SALESMAN','CLERK') 은 OR의 묶음이 아닌 AND의 묶음으로, 모두 아닌 것들 이다.
 ```
