Update 2. basic grammar.md

--- a/Oracle/2. basic grammar.md
+++ b/Oracle/2. basic grammar.md
@@ -23,3 +23,17 @@ SELECT
    WHERE JOB IN ('MANAGER','SALESMAN','CLERK');
    --WHERE JOB NOT IN('MANAGER','SALESMAN','CLERK') 은 OR의 묶음이 아닌 AND의 묶음으로, 모두 아닌 것들 이다.
 ```
+
+
+### BETWEEN
+```SQL
+SELECT 
+   FROM
+   WHERE SAL >=2000
+   WHERE <= 3000;
+```
+```SQL
+SELECT
+   FROM
+   WHERE BETWEEN 2000 AND 3000;
+```
