--- a/Oracle/2. basic grammar.md
+++ b/Oracle/2. basic grammar.md
@@ -37,3 +37,11 @@ SELECT
    FROM
    WHERE BETWEEN 2000 AND 3000;
 ```
+
+
+### LIKE
+```SQL
+SELECT
+   FROM
+   WHERE 'col' LIKE 'G%';   --G(대문자구분)로 시작하는 데이터 조회
+```
