--- a/Oracle/2. basic grammar.md
+++ b/Oracle/2. basic grammar.md
@@ -45,3 +45,8 @@ SELECT
    FROM
    WHERE 'col' LIKE 'G%';   --G(대문자구분)로 시작하는 데이터 조회
 ```
+#### 사용가능한 와일드카드
+|종류|의미|
+|---|----|
+|\_|어떤 값이든 상관없이 한 개의 문자 데이터를 의미|
+|%|길이와 상관없이(문자 없는 경우도 포함)모든 문자 데이터를 의미|
