--- a/Oracle/2. basic grammar.md
+++ b/Oracle/2. basic grammar.md
@@ -46,7 +46,7 @@ SELECT
    WHERE 'col' LIKE 'G%';   --G(대문자구분)로 시작하는 데이터 조회
 ```
 
-*사용가능한 와일드카드
+\*사용가능한 와일드카드
 |종류|의미|
 |---|----|
 |\_|어떤 값이든 상관없이 한 개의 문자 데이터를 의미|
