Update 2. basic grammar.md

--- a/Oracle/2. basic grammar.md
+++ b/Oracle/2. basic grammar.md
@@ -44,6 +44,7 @@ SELECT
 SELECT
    FROM
    WHERE 'col' LIKE 'G%';   --G(대문자구분)로 시작하는 데이터 조회
+   --WHERE 'col' LIKE '_B';  두번째 글자가 B인 데이터 
 ```
 
 \*사용가능한 와일드카드
