--- a/Oracle/2. basic grammar.md
+++ b/Oracle/2. basic grammar.md
@@ -64,5 +64,6 @@ SELECT
 |---|----|
 |UNION|연결된 SELECT문의 결과 값을 합집합으로 묶어준다. 결과 값의 중복은 제거된다.|
 |UNION ALL|연결된 SELECT문의 결과 값을 합집합으로 묶어준다. 중복된 결과 값도 제거 없이 모두 출력된다.|
-|MINUS|먼저 작성한 SELECT문의 결과 값에서 다음 SELECT문의 결과 값을 차집합 처리한다. n 먼저 작성한 SELECT문의 결과 값 중 다음 SELECT문에 존재하지 않는 데이터만 출력된다.|
+|MINUS|먼저 작성한 SELECT문의 결과 값에서 다음 SELECT문의 결과 값을 차집합 처리한다.
+먼저 작성한 SELECT문의 결과 값 중 다음 SELECT문에 존재하지 않는 데이터만 출력된다.|
 |INTERSECT|먼저 작성한 SELECT문과 다음 SELECT문의 결과 값이 다른 데이터만 출력된다. 교집합과 같은 |
