Update 3. func & data process & processing.md

--- a/Oracle/3. func & data process & processing.md
+++ b/Oracle/3. func & data process & processing.md
@@ -1,1 +1,23 @@
+## 대/소문자
+```SQL
+UPPER
+LOWER
+INITCAP
+```
+
+## 문자열 길이
+```SQL
+LENGTH
+LENGTHB --문자의 Byte 출력
+```
+SUBSTR(col,-LENGTH(col)) : 처음부터 끝까지가 되겠지
+|C|L|E|R|K|
+|--|--|--|--|--|
+|-5|-4|-3|-2|-1|
+
+
+## 문자열 추출
+```SQL
+SUBSTR(열,시작위치,추출길이)  --추출길이 입력안하면 끝까지
+```
 
