Update 3. func & data process & processing.md

--- a/Oracle/3. func & data process & processing.md
+++ b/Oracle/3. func & data process & processing.md
@@ -23,3 +23,9 @@ SUBSTR(col,-LENGTH(col)) : 처음부터 끝까지가 되겠지
 SUBSTR(열,시작위치,추출길이)  --추출길이 입력안하면 끝까지
 ```
 
+
+## 문자 위치 찾기
+INSTR('문자열/col',
+       찾을 문자열,
+       몇 번째 위치부터 검색?,
+       찾은 문자열 중 n번째의 위치)
