Update 3. func & data process & processing.md

--- a/Oracle/3. func & data process & processing.md
+++ b/Oracle/3. func & data process & processing.md
@@ -27,7 +27,32 @@ SUBSTR(열,시작위치,추출길이)  --추출길이 입력안하면 끝까지
 ## 문자 위치 찾기
 ```text
 INSTR('문자열/col',
-       찾을 문자열,
+      '찾을 문자',
        몇 번째 위치부터 검색?,
        찾은 문자열 중 n번째의 위치)
+```
+
+## 문자 교체
+```text
+REPLACE('문자열/col',
+        '찾는 문자',
+        '대체할 문자'
+       )
+```
+
+
+## 공백 채우기
+```TEXT
+LPAD
+RPAD('문자열/col',
+     최종 문자열 길이,
+     '공백을 채울 문자')
+     
+! 주의'My Name' 처럼 중간의 공백은 그냥 사라진다(MyName으로 바뀜). 즉, 왼쪽 오른쪽만 채우는 함수이다.
+```
+
+## 문자열 데이터 합치기
+```sql
+concat(문자열/col, 문자열/col, ...)
+concat(문자열/col, concat(' : ',문자열/col))  --중간에  : 를 삽입하여 연결
 ```
