--- a/Oracle/3. func & data process & processing.md
+++ b/Oracle/3. func & data process & processing.md
@@ -1,3 +1,4 @@
+# 문자열
 ## 대/소문자
 ```SQL
 UPPER
@@ -52,7 +53,84 @@ RPAD('문자열/col',
 ```
 
 ## 문자열 데이터 합치기
-```sql
+```text
+SELECT
 concat(문자열/col, 문자열/col, ...)
 concat(문자열/col, concat(' : ',문자열/col))  --중간에  : 를 삽입하여 연결
+```
+
+```TEXT
+||연산자
+SELECT 문자열/col || 문자열/col
+       문자열/col || ' : ' || 문자열/col
+```
+
+
+## 공백/문자열 제거
+### 공백제거
+```text
+옵션
+LEADING  앞에서 제거할 문자
+TRAILING 뒤에서 제거할 문자
+BOTH     양쪽에서 제거할 문자
+```
+### 문자열 제거
+```SQL
+SELECT '(' || TRIM('_' FROM '_ _ORRACLE_ _') || ')',
+       '(' || TRIM(LEADING '_' FROM '_ _ORRACLE_ _') || ')',
+       '(' || TRIM(TRAILING '_' FROM '_ _ORRACLE_ _') || ')',
+       '(' || TRIM(BOTH '_' FROM '_ _ORRACLE_ _') || ')'
+       FROM DUAL;
+```
+### LTRIM, RTRIM
+```SQL
+SELECT '(' || TRIM(' _ORACLE_ ') || ')',
+       '(' || LTRIM(' _ORACLE_ ') || ')',
+       '(' || RTRIM(' _ORACLE_ ') || ')',
+       '(' || LTRIM(' <_ORACLE_> ', '_<') || ')',   -- <_로 만들수 있는 조합 <_, _< 을 삭제한다
+       '(' || RTRIM(' <_ORACLE_> ') '>_'|| ')'      -- >_로 만들수 있는 조합 >_, _> 을 삭제한다
+       
+       FROM DUAL;
+```
+
+
+# 숫자
+## 숫자
+|함수|설명|
+|---|---|
+|ROUND|반올림|
+|TRUNC|버림|
+|CEIL|위로 가까운 정수|
+|FLOOR|아래로 가까운 정수|
+|MOD|나머지|
+
+# 날짜
+## 
+```TEXT
+날짜 데이터간 +는 되지 않는다.
+날짜 + 숫자 : 일 수 더하기
+날짜 - 숫자 : 일 수 빼기
+날짜 - 날짜 : 날짜간 차이
+```
+
+## n개월 더하기
+```SQL
+SELECT SYSDATE, ADD_MONTHS(SYSDATE, 3) AS AFTER_3MONTHS
+      FROM DUAL;
+```
+
+## 날짜 차이 구하기(절댓값이 아닌 앞에서 뒤를 빼는 것임)
+```SQL
+SELECT EMPNO, ENAME, HIREDATE, SYSDATE,
+    MONTHS_BETWEEN(HIREDATE, SYSDATE) AS MONTHS1,
+    MONTHS_BETWEEN(SYSDATE, HIREDATE) AS MONTHS2,
+    TRUNC(MONTHS_BETWEEN(SYSDATE, HIREDATE)) AS MONTHS3
+    FROM EMP; 
+```
+## 
+```SQL
+SELECT SYSDATE,
+    NEXT_DAY(SYSDATE, '월요일'),   --기준날짜로부터 가장 먼저 오는 월요일의날짜 반환
+    LAST_DAY(SYSDATE)              -- 기준날짜의 해당 월의 마지막 날짜반환
+    FROM DUAL;
 ```
