Update 3. func & data process & processing.md

--- a/Oracle/3. func & data process & processing.md
+++ b/Oracle/3. func & data process & processing.md
@@ -127,10 +127,48 @@ SELECT EMPNO, ENAME, HIREDATE, SYSDATE,
     TRUNC(MONTHS_BETWEEN(SYSDATE, HIREDATE)) AS MONTHS3
     FROM EMP; 
 ```
-## 
+## 다음 요일 / 달의 마지막 날짜
 ```SQL
 SELECT SYSDATE,
     NEXT_DAY(SYSDATE, '월요일'),   --기준날짜로부터 가장 먼저 오는 월요일의날짜 반환
     LAST_DAY(SYSDATE)              -- 기준날짜의 해당 월의 마지막 날짜반환
+    FROM DUAL;
+```
+
+## ROUND, TRUNC 포맷
+```SQL
+SELECT SYSDATE,
+       ROUND(SYSDATE, 'CC') AS CC, 
+       ROUND(SYSDATE, 'YYYY') AS YYYY,
+       ROUND(SYSDATE, 'Q') AS Q,
+       ROUND(SYSDATE, 'DDD') AS DDD,
+       ROUND(SYSDATE, 'HH') AS HH
+    FROM DUAL;
+```
+
+## 날짜 출력(형변환 이용)
+|형식|설명|
+|---|---|
+|CC|세기|
+|YYYY,RRRR|연(4자리숫자)|
+|YY,RR|연(2자리숫자)|
+|MM|월(2자리숫자)|
+|MON|월(언어별 월 이름 약자)|
+|MONTH|월(언어별 월 이름 전체)|
+|DD|일(2자리 숫자)|
+|DDD|1년 중 며칠(1~366)|
+|DY|요일(언어별 요일 이름 약자)|
+|DAY|요일(언어별 요일 이름 전체)|
+|W|1년중 몇 번째 주(1~53)|
+
+```SQL
+SELECT SYSDATE,
+    TO_CHAR(SYSDATE,'MM') AS MM,
+    TO_CHAR(SYSDATE,'MON', 'NLS_DATE_LANGUAGE = KOREAN') AS MON_KOR,
+    TO_CHAR(SYSDATE,'MON', 'NLS_DATE_LANGUAGE = JAPANESE') AS MON_JAP,
+    TO_CHAR(SYSDATE,'MON', 'NLS_DATE_LANGUAGE = ENGLISH') AS MON_ENG,
+    TO_CHAR(SYSDATE,'MONTH', 'NLS_DATE_LANGUAGE = KOREAN') AS MONTH_KOR,
+    TO_CHAR(SYSDATE,'MONTH', 'NLS_DATE_LANGUAGE = JAPANESE') AS MONTH_JAP,
+    TO_CHAR(SYSDATE,'MONTH', 'NLS_DATE_LANGUAGE = ENGLISH') AS MONTH_CHN
     FROM DUAL;
 ```
