Update 3. func & data process & processing.md

--- a/Oracle/3. func & data process & processing.md
+++ b/Oracle/3. func & data process & processing.md
@@ -172,3 +172,50 @@ SELECT SYSDATE,
     TO_CHAR(SYSDATE,'MONTH', 'NLS_DATE_LANGUAGE = ENGLISH') AS MONTH_CHN
     FROM DUAL;
 ```
+
+## 시간 출력(형변환 이용)
+|형식|설명|
+|---|---|
+|HH24|24시간으로 표현한 시간|
+|HH,HH12|12시간으로 표현한 시간|
+|MI|분|
+|SS|초|
+|AM, PM, A.M., P.M.|오전,오후 표시|
+```SQL
+SELECT SYSDATE,
+    TO_CHAR(SYSDATE, 'HH24:MI:SS'),
+    TO_CHAR(SYSDATE, 'HH12:MI:SS AM'),
+    TO_CHAR(SYSDATE, 'HH12:MI:SS PM'),
+    TO_CHAR(SYSDATE, 'HH:MI:SS P.M.')
+    FROM DUAL;
+```
+
+## 숫자 출력(형변환 이용)
+```SQL
+SELECT SYSDATE,
+    TO_CHAR(SYSDATE, 'HH24:MI:SS'),
+    TO_CHAR(SYSDATE, 'HH12:MI:SS AM'),
+    TO_CHAR(SYSDATE, 'HH12:MI:SS PM'),
+    TO_CHAR(SYSDATE, 'HH:MI:SS P.M.')
+    FROM DUAL;
+```
+
+## 문자형인 숫자끼리 계산
+```SQL
+SELECT TO_NUMBER('1,300','999,999') - TO_NUMBER('1,500','999,999') AS TO_NUMBER
+      FROM DUAL;
+```
+
+## 날짜형으로 (49/12/10 -> 2049/12/10)
+```SQL
+SELECT TO_DATE('49/12/10','YY/MM/DD')
+      FROM DUAL;
+```
+
+
+# NULL 처리 함수
+
+
+
+
+
