Update 3. func & data process & processing.md

--- a/Oracle/3. func & data process & processing.md
+++ b/Oracle/3. func & data process & processing.md
@@ -1,4 +1,6 @@
-# 문자열
+*# 문자열*
+***
+
 ## 대/소문자
 ```SQL
 UPPER
@@ -93,8 +95,9 @@ SELECT '(' || TRIM(' _ORACLE_ ') || ')',
        FROM DUAL;
 ```
 
+***
 
-# 숫자
+*# 숫자*
 ## 숫자
 |함수|설명|
 |---|---|
@@ -104,7 +107,9 @@ SELECT '(' || TRIM(' _ORACLE_ ') || ')',
 |FLOOR|아래로 가까운 정수|
 |MOD|나머지|
 
-# 날짜
+***
+
+*# 날짜*
 ## 
 ```TEXT
 날짜 데이터간 +는 되지 않는다.
@@ -212,8 +217,9 @@ SELECT TO_DATE('49/12/10','YY/MM/DD')
       FROM DUAL;
 ```
 
+***
 
-# NULL 처리 함수
+*# NULL 처리 함수*
 
 
 
