Update 3. func & data process & processing.md

--- a/Oracle/3. func & data process & processing.md
+++ b/Oracle/3. func & data process & processing.md
@@ -1,4 +1,4 @@
-*# 문자열*
+# *문자열*
 ***
 
 ## 대/소문자
@@ -97,7 +97,7 @@ SELECT '(' || TRIM(' _ORACLE_ ') || ')',
 
 ***
 
-*# 숫자*
+# *숫자*
 ## 숫자
 |함수|설명|
 |---|---|
@@ -109,7 +109,7 @@ SELECT '(' || TRIM(' _ORACLE_ ') || ')',
 
 ***
 
-*# 날짜*
+# *날짜*
 ## 
 ```TEXT
 날짜 데이터간 +는 되지 않는다.
@@ -219,7 +219,7 @@ SELECT TO_DATE('49/12/10','YY/MM/DD')
 
 ***
 
-*# NULL 처리 함수*
+# *NULL 처리 함수*
 
 
 
