Update 3. func & data process & processing.md

--- a/Oracle/3. func & data process & processing.md
+++ b/Oracle/3. func & data process & processing.md
@@ -218,8 +218,43 @@ SELECT TO_DATE('49/12/10','YY/MM/DD')
 ***
 
 # *NULL 처리 함수*
+```SQL
+NVL(col, null일때 반환 할 값
+NVL2(col, null이 아닐 때 반환 값, null일 때 반환 값)
+```
 
+# *상황에 따라 다른 데이터를 반환*
+## DECODE(유사 if, else) / CASE(유사 switch case)
+``` text
+DECODE(col,
+    조건1, 조건1 T 일때 반환 값
+    조건2, 조건2 T 일때 반환 값
+    ...
+    else 반환 값
+)
+```
 
+```sql
+SELECT EMPNO, ENAME, JOB, SAL,
+    DECODE(JOB,
+           'MANAGER', SAL*1.1,
+           'SALESMAN', SAL*1.05,
+           'ANALYST', SAL,
+           SAL*1.03) AS UPSAL
+    FROM EMP;
+```
+*참고 : DECODE --> CASE  지만  CASE -/-> DECODE*
+
+```TEXT
+CASE(col,
+      WHEN 조건1 THEN 조건1 T 일때 값   -- ,가 없다는 것을 주의하자.
+      WHEN 조건1 THEN 조건1 T 일때 값
+      ...
+      ELSE 값
+END
+)
+```
+```
 
 
 
