--- a/Oracle/4. multiple rows func & grouping.md
+++ b/Oracle/4. multiple rows func & grouping.md
@@ -1,1 +1,40 @@
 # *다중 행 함수*
+```TEXT
+SUM
+COUNT
+MAX
+MIN
+AVG
+
+SUM(col) = SUM(ALL col) : 합계
+SUM(DISTINCT col) : 중복 값 제거 후 함수 적용
+
+GROUPING을 하지 않았기 때문에 WHERE절로 통제 가능 (GROUPING 의 HAVING과 혼용하지 말것)
+```
+
+
+# *GROUPING*
+```TEXT
+기본 문법 순서
+SELECT
+  FROM
+ WHERE
+ GROUP BY col1, col2 ...
+ HAVING 조건
+ ORDER BY
+```
+```SQL
+SELECT DEPTNO, JOB, AVG(SAL)
+    FROM EMP
+  GROUP BY DEPTNO, JOB
+    HAVING AVG(SAL) >= 2000      -- GROUPING 된 것은 WHERE로 통제가 불가능 하다. HAVING만 이용하도록 하자.
+  ORDER BY DEPTNO, JOB;
+```
+
+## 난이도 UP!
+```TEXT
+ROLLUP : 그룹별 통계치를 내는데 사용한다.
+CUBE : 그룹별 통계치를 내는데 사용한다. 더 많은 자료가 나오고 2^n개 나오므로 적절히. 
+       + order by를 해주어야 한번에 보기 쉽다.
+GROUPING SETS : 열별로 각각 따로 결과를 출력해 준다.
+```
