--- a/Oracle/4. multiple rows func & group.md
+++ b/Oracle/4. multiple rows func & group.md
@@ -15,7 +15,8 @@ GROUPING을 하지 않았기 때문에 WHERE절로 통제 가능 (GROUPING 의 H
 ***
 
 
-# *GROUPING*
+# *GROUP*
+## GROUP BY
 ```sql  
 기본 문법 순서
 SELECT
@@ -62,3 +63,19 @@ SELECT DEPTNO, JOB, COUNT(*)
     ORDER BY DEPTNO, JOB;
 ```
 
+## GROUPING
+```TEXT
+그룹화 함수는 데이터 자체의 가공이나 특별한 연산 기능을 수행하지는 않지만 그룹화 데이터의 식별이 쉽고
+가독성을 높이기 위한 목적으로 사용한다.
+ROLLUP/CUBE를 사용한 GROUP BY절에 그룹화 대상으로 지정한 열이 그룹화된 상태로 결과가 집계되었는지 확인하는데 사용
+GROUP BY절에 명시된 열 중 하나를 지정할 수 있다.
+```
+```SQL
+SELECT DEPTNO, JOB, COUNT(*), MAX(SAL), SUM(SAL), AVG(SAL),
+        GROUPING(DEPTNO),
+        GROUPING(JOB)
+    FROM EMP
+    
+    GROUP BY CUBE(DEPTNO, JOB)
+    ORDER BY DEPTNO, JOB;
+```
