Update 4. multiple rows func & group.md

--- a/Oracle/4. multiple rows func & group.md
+++ b/Oracle/4. multiple rows func & group.md
@@ -64,11 +64,13 @@ SELECT DEPTNO, JOB, COUNT(*)
 ```
 
 ## GROUPING
+### GROUPING
 ```TEXT
 그룹화 함수는 데이터 자체의 가공이나 특별한 연산 기능을 수행하지는 않지만 그룹화 데이터의 식별이 쉽고
 가독성을 높이기 위한 목적으로 사용한다.
 ROLLUP/CUBE를 사용한 GROUP BY절에 그룹화 대상으로 지정한 열이 그룹화된 상태로 결과가 집계되었는지 확인하는데 사용
 GROUP BY절에 명시된 열 중 하나를 지정할 수 있다.
+그룹화된 것은 0, 안된 것은 1로 출력한다.
 ```
 ```SQL
 SELECT DEPTNO, JOB, COUNT(*), MAX(SAL), SUM(SAL), AVG(SAL),
@@ -79,3 +81,26 @@ SELECT DEPTNO, JOB, COUNT(*), MAX(SAL), SUM(SAL), AVG(SAL),
     GROUP BY CUBE(DEPTNO, JOB)
     ORDER BY DEPTNO, JOB;
 ```
+
+### GROUPING_ID
+```TEXT
+GROUPING과 마찬지로 ROLLUP 또는 CUBE로 연산할 때 특정 열이 그룹화되었는지를 출력하는 함수이다.
+하지만, GROUPING과는 달리 한 번에 여러 열을 지정할 수 있습니다.
+각 그룹화 열들을 이진수 비트로 나열하고 십진수로 변경
+```
+```SQL
+SELECT DEPTNO, JOB, COUNT(*),SUM(SAL),
+        GROUPING(DEPTNO),
+        GROUPING(JOB),
+        GROUPING_ID(DEPTNO,JOB)
+    FROM EMP
+    
+    GROUP BY CUBE(DEPTNO,JOB)
+    ORDER BY DEPTNO, JOB;
+```
+
+### LISTAGG
+```TEXT
+그룹에 속해  있는 데이트를 가로로 나열할 때 쓴다.
+```
+
