Update 4. multiple rows func & group.md

--- a/Oracle/4. multiple rows func & group.md
+++ b/Oracle/4. multiple rows func & group.md
@@ -102,5 +102,44 @@ SELECT DEPTNO, JOB, COUNT(*),SUM(SAL),
 ### LISTAGG
 ```TEXT
 그룹에 속해  있는 데이트를 가로로 나열할 때 쓴다.
+
+LISTAGG(col,구분자(선택))
+WITHIN GROUP(ORDER BY 나열할 열의 정렬 기준(선택))
+```
+```SQL
+SELECT DEPTNO,
+       LISTAGG(ENAME,', ')
+       WITHIN GROUP(ORDER BY SAL DESC) AS ENAMES
+    FROM EMP
+    GROUP BY DEPTNO;
 ```
 
+### PIVOT / UNPIVOT
+```TEXT
+가로 줄로 표기할 열을 FOR로 명시 후, IN안에 출력하려는 열 데이터를 지정
+```
+```SQL
+SELECT *     
+    FROM(SELECT DEPTNO, JOB, SAL
+        FROM EMP)
+    PIVOT(MAX(SAL)
+        FOR DEPTNO IN (10,20,30)
+    )    
+ORDER BY JOB;
+```
+```SQL
+--UNPIVOT
+SELECT *
+    FROM(SELECT DEPTNO,
+            MAX(DECODE(JOB, 'CLERK', SAL)) AS "CLERK",
+            MAX(DECODE(JOB, 'SALESMAN', SAL)) AS "SALESMAN",
+            MAX(DECODE(JOB, 'PRESIDENT', SAL)) AS "PRESIDENT",
+            MAX(DECODE(JOB, 'MANAGER', SAL)) AS "MANAGER",
+            MAX(DECODE(JOB, 'ANALYST', SAL)) AS "ANALYST"
+        FROM EMP
+        GROUP BY DEPTNO
+        ORDER BY DEPTNO)
+    UNPIVOT(SAL
+        FOR JOB IN (CLERK, SALESMAN, PRESIDENT, MANAGER, ANALYST))
+    ORDER BY DEPTNO, JOB;
+```
