Update 4. multiple rows func & group.md

--- a/Oracle/4. multiple rows func & group.md
+++ b/Oracle/4. multiple rows func & group.md
@@ -128,7 +128,7 @@ SELECT *
 ORDER BY JOB;
 ```
 ```SQL
---UNPIVOT
+--UNPIVOT  : R에서 GATHER로 생각하면 될듯
 SELECT *
     FROM(SELECT DEPTNO,
             MAX(DECODE(JOB, 'CLERK', SAL)) AS "CLERK",
@@ -143,3 +143,4 @@ SELECT *
         FOR JOB IN (CLERK, SALESMAN, PRESIDENT, MANAGER, ANALYST))
     ORDER BY DEPTNO, JOB;
 ```
+
