Update 3. func & data process & processing.md

--- a/Oracle/3. func & data process & processing.md
+++ b/Oracle/3. func & data process & processing.md
@@ -246,13 +246,13 @@ SELECT EMPNO, ENAME, JOB, SAL,
 *참고 : DECODE --> CASE  지만  CASE -/-> DECODE*
 
 ```TEXT
-CASE(col,
+CASE col,
       WHEN 조건1 THEN 조건1 T 일때 값   -- ,가 없다는 것을 주의하자.
       WHEN 조건1 THEN 조건1 T 일때 값
       ...
       ELSE 값
 END
-)
+
 ```
 ```
 
