--- a/Oracle/5. Join.md
+++ b/Oracle/5. Join.md
@@ -44,3 +44,66 @@ join의 종류
 - 여러 테이블의 열 이름이 같을 때
 
   테이블을 명시해 주자
+
+```SQL
+SELECT E.EMPNO, E.ENAME, E.JOB, E.MGR, E.HIREDATE, E.SAL, E.COMM, E.DEPTNO,
+       D.DNAME, D.LOC
+    FROM EMP E, DEPT D
+   WHERE E.DEPTNO = D.DEPTNO
+ORDER BY EMPNO;
+```
+
+- WHERE절에 조건식 추가하여 출력 범위 설정하기
+```SQL
+SELECT E.EMPNO, E.ENAME, E.SAL, D.DEPTNO, D.DNAME, D.LOC
+    FROM EMP E, DEPT D
+   WHERE E.DEPTNO = D.DEPTNO
+        AND SAL >=3000;
+```
+
+## 비등가 조인
+### 서로 값이 일치하지 않을 때 (등급 정할 때. 즉, [학생 점수 + 등급 범위 제시한 표])
+```SQL
+SELECT E.EMPNO, S.GRADE
+    FROM EMP E, SALGRADE S
+   WHERE E.SAL BETWEEN S.LOSAL AND S.HISAL;
+```
+
+## 자체 조인
+### 아직 이 수준에서는 완전히 똑같은 복제 테이블이 필요하다.
+```SQL
+SELECT *
+    FROM EMP E, COPY_EMP C   -- 이 코드에서는 COPY_EMP를 새로 만들어둔 상태라 가정했을 때다.
+    WHERE E.MGR=C.EMPNO;
+```
+```text
+하지만 위의 방법은 용량 문제 뿐만아니라 두번의 작업을 하기 때문에 시간적으로 비효율적이다.
+그렇기 때문에 한 개를 더 만들지 말고 한 테이블로 별칭을 다르게 불러주자.
+참조하는 부분에 있어 null 이있다면 행 출력 자체가 제외된다.
+```
+
+## 외부 조인(outer join)
+```text
+자체 조인과 다르게 참조되는 부분에 null 이있더라도 행을 출력해야 하는 경우가 있다. 
+```
+```SQL
+-- LEFT JOIN
+SELECT E1.EMPNO, E1.ENAME, E1.MGR,
+       E2.EMPNO AS MGR_EMPNO,
+       E2.ENAME AS MGR_ENAME
+       
+    FROM EMP E1, EMP E2
+   WHERE E1.MGR = E2.EMPNO(+)
+ORDER BY E1.EMPNO;
+
+
+-- RIGHT JOIN
+SELECT E1.EMPNO, E1.ENAME, E1.MGR,
+       E2.EMPNO AS MGR_EMPNO,
+       E2.ENAME AS MGR_ENAME
+       
+    FROM EMP E1, EMP E2
+   WHERE E1.MGR(+) = E2.EMPNO
+ORDER BY E1.EMPNO;
+```
+
