--- a/Oracle/5. Join.md
+++ b/Oracle/5. Join.md
@@ -30,6 +30,7 @@ ORDER BY EMPNO;
 
 ***
 ***
+
 # Join
 ```text
 join의 종류
@@ -55,10 +56,12 @@ ORDER BY EMPNO;
 
 - WHERE절에 조건식 추가하여 출력 범위 설정하기
 ```SQL
-SELECT E.EMPNO, E.ENAME, E.SAL, D.DEPTNO, D.DNAME, D.LOC
-    FROM EMP E, DEPT D
-   WHERE E.DEPTNO = D.DEPTNO
-        AND SAL >=3000;
+SELECT E.EMPNO, E.ENAME, E.JOB, E.MGR, E.HIREDATE, E.SAL, E.COMM, 
+       E.DEPTNO,
+       D.DNAME, D.LOC
+FROM EMP E, DEPT D
+WHERE E.DEPTNO = D.DEPTNO
+    AND SAL >=3000;
 ```
 
 ## 비등가 조인
@@ -112,4 +115,59 @@ ORDER BY E1.EMPNO;
 ***
 
 # SQL-99 표준 문법 조인
+FROM문에 바로 때려버리기
+## NATURAL JOIN = 등가 조인
+```SQL
+-- 기준열을 알아서 찾아준다. DEPTNO
+SELECT E.EMPNO, E.ENAME, E.JOB, E.MGR, E.HIREDATE, E.SAL, E.COMM,
+       DEPTNO, D.DNAME, D.LOC
+    FROM EMP E NATURAL JOIN DEPT D
+    ORDER BY DEPTNO, E.EMPNO;
+```
+
+## JOIN ~ USING = 등가 조인
+```SQL
+-- 기준열을 명시해야 한다.
+SELECT E.EMPNO, E.ENAME, E.JOB, E.MGR, E.HIREDATE, E.SAL, E.COMM,
+       DEPTNO, D.DNAME, D.LOC
+    FROM EMP E JOIN DEPT D USING (DEPTNO)
+   ORDER BY DEPTNO, E.EMPNO;
+```
+
+## JOIN ~ ON
+기존 WHERE절에 있는 조인 조건식을 ON 키워드 옆에 작성한다.
+
+조인 기준 조건식은 ON에 명시하고 그밖의 출력 행을 걸러 내기 위해 WHERER 조건식을 따로 사용하는 방법이다.
+
+```SQL
+SELECT E.EMPNO, E.ENAME, E.JOB, E.MGR, E.HIREDATE, E.SAL, E.COMM,
+       E.DEPTNO,
+       D.DNAME, D.LOC
+    FROM EMP E JOIN DEPT D ON (E.DEPTNO = D.DEPTNO)  --현재 상황은 등가 조인 한 것.
+   WHERE SAL>=3000;
+```
+
+## OUTER JOIN
+### LEFT / RIGHT /FULL JOIN
+```SQL
+SELECT E1.EMPNO, E1.ENAME, E1.MGR,
+       E2.EMPNO AS MGR_EMPNO,
+       E2.ENAME AS MGR_ENAME
+    FROM EMP E1 LEFT OUTER JOIN EMP E2 ON (E1.MGR = E2.EMPNO)     --LEFT만 RIGHT/FULL 로 바꿔주면 된다.
+   ORDER BY E1.EMPNO;
+```
+
+## JOIN MORE THAN 3 TABLES
+```TEXT
+형식
+FROM TABLE1, TABLE2, TABLE3
+WHERE TABLE1.COL = TABLE2.COL
+AND TABLE2.COL = TABLE3.COL
+```
+
+
+
+
+
+
 
