--- a/Oracle/6. SUB QUERY.md
+++ b/Oracle/6. SUB QUERY.md
@@ -1,1 +1,124 @@
+```text
+서브쿼리와 메인쿼리를 잘 나누자.
+A사원 보다 월급이 높은 사람을 조회할 때
+
+A사원의 월급이 기준이 될 것이고, A사원의 월급을 찾는게 서브쿼리
+전체가 메인쿼리가 된다.
+```
+
+```SQL
+SELECT *
+    FROM EMP
+   WHERE SAL > (SELECT SAL
+                    FROM EMP
+                   WHERE ENAME = 'JONES'
+                    );
+```
+## 서브쿼리의 특징
+```TEXT
+1. 서브쿼리는 연산자와 같은 비교 또는 조회 대상의 오른쪽에 놓이며 괄호로 묶어서 사용한다.
+2. 특수한 몇몇 경우를 제외한 대부분의 서브쿼리에서는 ORDER BY절을 사용할 수 없다.
+3. 서브쿼리의 SELECT절에 명시한 열은 메인쿼리의 비교 대상과 같은 자료형과 같은 개수로 지정해야 한다.
+   즉 메인쿼리의 비교 대상 데이터가 하나라면 서브쿼리의 SELECT절 역시 같은 자료형인 열을 하나 지정해야 한다.
+4. 서브쿼리에 있는 SELECT문의 결과 행 수는 함께 사용하는 메인쿼리의 연산자 종류와 호환 가능해야 한다.
+   예를 들어 메인쿼리에 사용한 연산자가 단 하나의 데이터로만 연산이 간으한 연산자라면
+   서브쿼리의 결과 행 수는 반드시 하나여야 한다. -> 단일행 서브쿼리 및 다중행 서브쿼리에서 자세히 다룬다.
+```
+
+***
+# *행*
+# 실행 결과가 하나인 단일행 서브쿼리
+```SQL
+SELECT E.EMPNO, E.ENAME, E.JOB,E.SAL, D.DEPTNO,D.DNAME,D.LOC
+    FROM EMP E, DEPT D
+   WHERE E.DEPTNO = D.DEPTNO
+    AND E.DEPTNO =20
+    AND E.SAL > (SELECT AVG(SAL)  -- >여기 서브쿼리에서 나오는게 평균 하나이므로 단일행 이라는 것이다
+                    FROM EMP);
+```
+
+# 실행 결과가 여러 개인 다중행 서브쿼리
+|다중행 연산자|설명|
+|---|----|
+|IN|메인쿼리의 데이터가 서브쿼리의 결과 중 하나라도 일치한 데이터가 있다면 TRUE|
+|ANY, SOME|메인쿼리의 조건식을 만족하는 서브쿼리의 결과가 하나 이상이면 TRUE|
+|ALL|메인쿼리의 조건식을 서브쿼리의 결과 모두가 만족하면 TRUE|
+|EXIST|서브쿼리에 뭐라도 결과가 존재하면(즉, 행이 1개 이상일 경우) TRUE|
+
+## IN
+```SQL
+SELECT *
+    FROM EMP
+   WHERE DEPTNO IN (20,30);
+```
+```SQL
+SELECT *
+    FROM EMP
+   WHERE SAL IN (SELECT MAX(SAL)
+                    FROM EMP
+                   GROUP BY DEPTNO
+                );
+```
+
+
+## ANY
+```TEXT
+등가 비교 연사자와 함께 사용한다면 IN과 정확하게 같다.
+```
+```SQL
+--등가비교
+SELECT *
+    FROM EMP
+   WHERE SAL = ANY (SELECT MAX(SAL)
+                    FROM EMP
+                   GROUP BY DEPTNO)
+```
+
+```SQL
+--대소비교
+SELECT *
+    FROM EMP
+  WHERE SAL < ANY(SELECT SAL          -- WHERE SAL < (SELECT MAX(SAL) 와 같다
+                        FROM EMP
+                       WHERE DEPTNO = 30
+                    )
+  ORDER BY SAL, EMPNO;
+
+```
+
+## ALL
+```SQL
+SELECT *
+    FROM EMP
+  WHERE SAL < ALL (SELECT SAL
+                        FROM EMP
+                       WHERE DEPTNO = 30
+                    )
+```
+
+## EXISTS
+```sql
+SELECT *
+    FROM EMP
+   WHERE EXISTS (SELECT DNAME
+                    FROM DEPT
+                   WHERE DEPTNO = 10);
+```
+
+***
+
+# *열*
+# 비교할 열이 여러 개인 다중열 서브쿼리
+
+
+
+
+
+
+
+
+
+
+
+
 
