Update 6. SUB QUERY.md

--- a/Oracle/6. SUB QUERY.md
+++ b/Oracle/6. SUB QUERY.md
@@ -109,14 +109,50 @@ SELECT *
 
 # *열*
 # 비교할 열이 여러 개인 다중열 서브쿼리
+```text
+서브쿼리의 SELECT절에 비교할 데이터를 여러 개 지정하는 방식
+```
+```SQL
+SELECT *
+    FROM EMP
+   WHERE (DEPTNO, SAL) IN (SELECT DEPTNO, MAX(SAL)
+                                FROM EMP
+                                GROUP BY DEPTNO);
+```
 
+---
 
+# FROM절에 사용하는 서브쿼리와 WITH절
+```TEXT
+FROM절에 사용하는 서브쿼리는 인라인 뷰라고 한다.
+인라인 뷰는 특정 테이블 전체 데이터가 아닌 SELELCT문을 통해 일부 데이터를 먼저 추출해 온 후 별칭을 주어 사용한다.
+```
+```SQL
+SELECT E10.EMPNO, E10.ENAME, E10.DEPTNO, D.DNAME, D.LOC
+    FROM (SELECT * FROM EMP WHERE DEPTNO =10) E10,
+         DEPT D
+       WHERE E10.DEPTNO = D.DEPTNO;
+```
+FROM 절이 길면 가독성이 떨어질 수 있다. WITH를 사용하자
 
-
-
-
-
-
+```TEXT
+WITH는 메인 쿼리가 될 SELECT문 안에서 사용할 서브쿼리와 별칭을 먼저 지정한 후 메인쿼리에서 사용한다.
+WITH
+별칭1 AS (SELECT문 1),
+별칭2 AS (SELECT문 2),
+...
+별칭n AS (SELECT문 n)
+SELECT
+    FROM 별칭1, 별칭2, ...
+```
+```SQL
+WITH
+E10 AS (SELECT * FROM EMP WHERE DEPTNO =10),
+D   AS (SELECT * FROM DEPT)
+SELECT E10.EMPNO, E10.ENAME, E10.DEPTNO, D.DNAME, D.LOC
+    FROM E10, D
+   WHERE E10.DEPTNO = D.DEPTNO;
+```
 
 
 
