--- a/Oracle/6. SUB QUERY.md
+++ b/Oracle/6. SUB QUERY.md
@@ -126,6 +126,7 @@ SELECT *
 ```TEXT
 FROM절에 사용하는 서브쿼리는 인라인 뷰라고 한다.
 인라인 뷰는 특정 테이블 전체 데이터가 아닌 SELELCT문을 통해 일부 데이터를 먼저 추출해 온 후 별칭을 주어 사용한다.
+
 ```
 ```SQL
 SELECT E10.EMPNO, E10.ENAME, E10.DEPTNO, D.DNAME, D.LOC
@@ -133,7 +134,7 @@ SELECT E10.EMPNO, E10.ENAME, E10.DEPTNO, D.DNAME, D.LOC
          DEPT D
        WHERE E10.DEPTNO = D.DEPTNO;
 ```
-FROM 절이 길면 가독성이 떨어질 수 있다. WITH를 사용하자
+★FROM 절이 길면 가독성이 떨어질 수 있다. WITH를 사용하자
 
 ```TEXT
 WITH는 메인 쿼리가 될 SELECT문 안에서 사용할 서브쿼리와 별칭을 먼저 지정한 후 메인쿼리에서 사용한다.
@@ -154,6 +155,33 @@ SELECT E10.EMPNO, E10.ENAME, E10.DEPTNO, D.DNAME, D.LOC
    WHERE E10.DEPTNO = D.DEPTNO;
 ```
 
+# SLELCT절에 사용하는 서브쿼리
+
+★ SELECT절에 명시하는 서브쿼리는 반드시 하나의 결과만 반환하도록 작성해 주어야한다.
+
+```SQL
+SELECT EMPNO, ENAME, JOB, SAL,
+    (SELECT GRADE
+        FROM SALGRADE
+      WHERE E.SAL BETWEEN LOSAL AND HISAL) AS SALGRADE,
+       DEPTNO,
+    (SELECT DNAME
+        FROM DEPT
+      WHERE E.DEPTNO =DEPT.DEPTNO) AS DNAME
+    FROM EMP E;
+```
+```TEXT
+아래 방식은 기존에 배웠던 방식
+```
+```SQL
+SELECT E.EMPNO, E.ENAME, E.JOB, E.SAL,
+       S.GRADE SALGRADE,
+       D.DEPTNO, D.DNAME
+    FROM EMP E, SALGRADE S, DEPT D
+  WHERE E.SAL BETWEEN S.LOSAL AND S.HISAL
+  AND E.DEPTNO = D.DEPTNO(+)
+  ORDER BY E.EMPNO;
+```
 
 
 
