--- a/Oracle/7. Data Manipulate, describe, control.md
+++ b/Oracle/7. Data Manipulate, describe, control.md
@@ -89,6 +89,8 @@ UPDATE DEPT_TEMP2
     SET DNAME = 'DATABASE',
         LOC = 'SEOUL'
   WHERE DEPTNO=40;
+
+    
 ```
 
 ## 서브쿼리를 사용하여 데이터 수정하기
@@ -98,9 +100,44 @@ UPDATE DEPT_TEMP2
   WHERE DEPTNO = (SELECT DEPTNO
                     FROM DEPT_TEMP2
                    WHERE DNAME='OPERATIONS');
+  
+UPDATE DEPT_TEMP2
+    SET(DNAME, LOC) = (SELECT DNAME, LOC
+                            FROM DEPT
+                          WHERE DEPTNO =40)                   
+  WHERE DEPTNO = 40;
+  
+
+UPDATE DEPT_TEMP2
+    SET DNAME = (SELECT DNAME
+                    FROM DEPT
+                  WHERE DEPTNO =40),
+        LOC = (SELECT LOC
+                    FROM DEPT
+                  WHERE DEPTNO =40)
+    WHERE DEPTNO = 40;
 ```
 
 
+***
+
+# 데이터 삭제
+## 데이터 일부분 삭제
+```SQL
+DELETE FROM EMP_TEMP2
+    WHERE JOB = 'MANAGER';
+    
+```
+
+### 서브쿼리 이용한 삭제
+```SQL
+DELETE FROM EMP_TEMP2
+    WHERE EMPNO IN(SELECT E.EMPNO
+                        FROM EMP_TEMP2 E, SALGRADE S
+                      WHERE E.SAL BETWEEN S.LOSAL AND S.HISAL
+                      AND S.GRADE = 3
+                      AND DEPTNO =30)
+```
 
 
 
