Update 9. DATA DEFINITION.md

--- a/Oracle/9. DATA DEFINITION.md
+++ b/Oracle/9. DATA DEFINITION.md
@@ -1,1 +1,15 @@
-★
+### ★앞선 MDL과 달리 명령어를 수행하자마자 데이터베이스에 수행한 내용이 반영된다.
+
+```TEXT
+
+CREATE
+ALTER
+ -ADD
+ -RENAME
+ -MODIFY
+ -DFROP COLUMN
+RENAME
+TRUNCATE
+DROP
+```
+
