Update 9. DATA DEFINITION.md

--- a/Oracle/9. DATA DEFINITION.md
+++ b/Oracle/9. DATA DEFINITION.md
@@ -13,3 +13,79 @@ TRUNCATE
 DROP
 ```
 
+***
+
+# CREATE
+## 테이블 이름 생성 규칙
+```TEXT
+1. 테이블 이름은 문자로 시작해야한다.
+2. 테이블 이름은 30byte 이하여야 한다.
+3. 같은 사용자 소유의 테이블 이름은 중복될 수 없다.
+4. 테이블 이름은 영문자(한글), 숫자와 특수문자 $ # _ 를 사용할 수 있다.
+5. SQL 키워드는 테이블 이름으로 사용할 수 없다.
+```
+## 테이블 열 이름 생성 규칙
+```TEXT
+1. 열이름은 문자로 시작해야 한다.
+2. 열 이름은 30byte 이하여야 한다.
+3. 한 테이블의 열 이름은 중복될 수 없다.
+4. 테이블 이름은 영문자(한글), 숫자와 특수문자 $ # _ 를 사용할 수 있다.
+5. SQL 키워드는 테이블 이름으로 사용할 수 없다.
+```
+
+## 테이블 생성
+```SQL
+CREATE TABLE EMP_DDL(
+EMPNO    NUMBER(4),
+ENAME    VARCHAR2(10),
+JOB      VARCHAR2(9),
+MGR      NUMBER(4),
+HIREDATE DATE,
+SAL      NUMBER(7,2),   -- 소수점 이하 두자리 숫자를 포함한 7자리 숫자를 정한다. 00000.00
+COMM     NUMBER(7,2),
+DEPTNO   NUMBER(2)
+);
+```
+
+### 열구조만 가져오기
+```SQL
+--조건절이 다 FALSE면 되겠지
+CREATE TABLE EMPDEPT_DDL
+    AS SELECT E.EMPNO, E.ENAME, E.JOB, E.MGR, E.HIREDATE,
+            E.SAL, E.COMM, D.DEPTNO, D.DNAME, D.LOC        --> * 으로 처리하면 열 이름 중복으로 안된다.
+          FROM EMP E, DEPT D
+        WHERE 1<>1;
+        
+```
+
+***
+
+# ALTER
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
