Update 9. DATA DEFINITION.md

--- a/Oracle/9. DATA DEFINITION.md
+++ b/Oracle/9. DATA DEFINITION.md
@@ -33,7 +33,7 @@ DROP
 5. SQL 키워드는 테이블 이름으로 사용할 수 없다.
 ```
 
-## 테이블 생성
+## 테이블 생성 () 
 ```SQL
 CREATE TABLE EMP_DDL(
 EMPNO    NUMBER(4),
@@ -61,9 +61,50 @@ CREATE TABLE EMPDEPT_DDL
 ***
 
 # ALTER
+```SQL
+ALTER TABLE EMP_ALTER
+    ADD HP VARCHAR2(20);
+```
 
+### ADD : 열 추가
+```SQL
+ALTER TABLE EMP_ALTER
+    ADD HP VARCHAR2(20);
+```
 
+### RENAME COLUMN : 열 이름 변경
+```SQL
+ALTER TABLE EMP_ALTER
+    RENAME COLUMN HP TO TEL;
+```
 
+### MODIFY 열 속성 변경
+```SQL
+ALTER TABLE EMP_ALTER
+    MODIFY EMPNO NUMBER(5);
+
+DESC EMP_ALTER;
+```SQL
+ALTER TABLE EMP_ALTER
+    DROP COLUMN TEL;
+```
+
+***
+
+# RENAME : 테이블 이름 변경
+```SQL
+RENAME EMP_ALTER TO EMP_RENAME;
+```
+
+# TRUNCATE : 테이블 데이터 삭제(열은 놔둠)
+```SQL
+TRUNCATE TABLE EMP_RENAME;
+```
+
+# DROP : 테이블 완전 삭제
+```SQL
+DROP TABLE EMP_RENAME;
+```
 
 
 
