--- a/Oracle/10. Object.md
+++ b/Oracle/10. Object.md
@@ -1,1 +1,95 @@
+- 데이터 사전
+- 인덱스
+- 뷰
+- 시퀀스
+- 동의어
+
+***
+
+***
+
+# 데이터 사전
+```SQL
+--SCOTT 계정에서 사용 가능한 데이터 사전
+SELECT * FROM DICT;
+SELECT * FROM DICTIONARY;
+```
+
+# USER_ 접두어를 가진 데이터 사전
+현재 오라클에 접속해 있는 사용자가 소유한 객체 정보 보관
+```SQL
+SELECT TABLE_NAME
+  FROM USER_TABLES;
+```
+# ALL_ 접두어를 가진 데이터 사전
+오라클 데이터베이스에 접속해 있는 사용자가 소유한 객체 및 다른 사용자가 소유한 객체 중
+
+사용이 허락되어 있는 객체 정보 보관
+
+즉 SCOTT으로 접속하면 SCOTT계정이 사용할 수 있는 테이블을 보여준다.
+```SQL
+SELECT OWNER, TABLE_NAME
+  FROM ALL_TABLES;
+```
+
+# DBA_ 접두어를 가진 데이터 사전
+데이터베이스 관리 권한을 가진 사용자만 조회가능
+
+존재하더라도 권한이 없는사람에게는 존재하지 않는다고 안내를 한다.
+
+```SQL
+-- SYSTEM으로 접속후
+SELECT * FROM DBA_TABLES;
+
+SELECT * FROM DBA_USERS
+  WHERE USERNAME=SCOTT;
+```
+
+***
+***
+
+# 인덱스
+## 인덱스 살펴보기
+```SQL
+SELECT *
+    FROM USER_INDEXES;  -- TABLE_NAME에 인덱스가 설정된 열이 나온다. 기본키, 고유키는 인덱스를 자동 생성해준다.
+    
+SELECT *   
+    FROM USER_IND_COLUMNS;
+```
+
+## 인덱스 생성
+```SQL
+CREATE INDEX IDX_EMP_SAL
+  ON EMP(SAL);
+```
+
+## 인덱스 삭제
+```SQL
+DROP INDEX IDX_EMP_SAL;
+```
+
+***
+***
+
+# 뷰 == SELECT로 보는 가상의 테이블
+```TEXT
+VW_EMP20 에 SELECT EMPNO,ENAME, JOB, DEPTNO
+                 FROM EMP
+               WHERE DEPTNO =20 을
+저장해둔다면
+
+SELECT * FROM VM_EMP20; 로 쉽게 불러올 수 있다.
+```
+## 뷰 생성   
+SCOTT은 권한이 없다. SYSTEM으로 접속 후 SCOTT에 VIEW 생성 권한을 준다.
+```SQL
+SQLPLUS에서 접속 후
+GRANT CREATE VIEW TO SCOTT;
+
+
+```
+![KakaoTalk_20200119_154243876](https://user-images.githubusercontent.com/34879309/72676263-878e1400-3ad2-11ea-898f-1a282b01995d.jpg)
+
+
 
