--- a/Oracle/10. Object.md
+++ b/Oracle/10. Object.md
@@ -83,6 +83,8 @@ SELECT * FROM VM_EMP20; 로 쉽게 불러올 수 있다.
 ```
 ## 뷰 생성   
 SCOTT은 권한이 없다. SYSTEM으로 접속 후 SCOTT에 VIEW 생성 권한을 준다.
+
+SELECT문만 저장하는 객체이다.
 ```SQL
 SQLPLUS에서 접속 후
 GRANT CREATE VIEW TO SCOTT;
@@ -90,6 +92,133 @@ GRANT CREATE VIEW TO SCOTT;
 
 ```
 ![KakaoTalk_20200119_154243876](https://user-images.githubusercontent.com/34879309/72676263-878e1400-3ad2-11ea-898f-1a282b01995d.jpg)
+
+```SQL
+CREATE VIEW VW_EMP20
+    AS (SELECT EMPNO, ENAME, JOB, DEPTNO
+        FROM EMP
+      WHERE DEPTNO = 20);
+```
+## 뷰 삭제
+```SQL
+DROP VIEW VW_EMP20;
+```
+
+## 인라인 뷰 (일회성 뷰)
+SELECT문에서 사용되는 서브쿼리, 
+
+WITH절에서 미리 이름을 정의해 두고 사용하는 SELECT문 등이 이에 해당된다.
+
+### 인라인 뷰 + ROWNUM
+```SQL
+SELECT ROWNUM, E.* 
+    FROM EMP E;
+```
+
+```SQL
+--차이를 파악하자
+SELECT ROWNUM, E.*
+    FROM EMP E
+  ORDER BY SAL DESC;
+  
+SELECT ROWNUM, E.*
+FROM(SELECT  *
+    FROM EMP E
+  ORDER BY SAL DESC) E;  
+
+
+WITH E AS (SELECT * FROM EMP ORDER BY SAL DESC)
+SELECT ROWNUM, E.*
+    FROM E;
+
+```
+### 상위 3개
+```SQL
+WITH E AS (SELECT * FROM EMP ORDER BY SAL DESC)
+SELECT ROWNUM, E.*
+    FROM E
+    WHERE ROWNUM<=3
+```
+
+
+
+***
+***
+
+# 시퀀스
+```SQL
+CREATE TABLE DEPT_SEQUENCE
+    AS SELECT *
+        FROM DEPT
+      WHERE 1<>1;
+```
+## 시퀀스 생성
+```SQL
+CREATE SEQUENCE SEQ_DEPT_SEQUENCE
+    INCREMENT BY 10
+    START WITH 10
+    MAXVALUE 90
+    MINVALUE 0
+    NOCYCLE
+    CACHE 2;
+```
+## 시퀀스 사용
+```TEXT
+시퀀스.CURRVAL : 시퀀스에서 마지막으로 생성한 번호 반환
+시퀀스.NEXTVAL : 다음 번호 생성
+```
+```SQL
+INSERT INTO DEPT_SEQUENCE (DEPTNO, DNAME, LOC)
+    VALUES (SEQ_DEPT_SEQUENCE.NEXTVAL, 'DATABASE','SEOUL');
+```
+
+## 시퀀스 수정
+```SQL
+INSERT INTO DEPT_SEQUENCE(DEPTNO,DNAME,LOC)
+    VALUES(SEQ_DEPT_SEQUENCE.NEXTVAL,'DATABASE','SEOUL');
+```
+
+## 시퀀스 삭제
+```SQL
+DROP SEQUENCE SEQ_DEPT_SEQUENCE;
+```
+
+***
+***
+
+# 동의어
+```TEXT
+권한 주기 SQLPLUS  SYSTEM접속
+GRANT CREATE SYNONYM TO SCOTT;
+GRANT CREATE PUBLIC SYNONYM TO SCOTT;
+```
+```SQL
+CREATE SYNONYM E
+    FOR EMP;
+    
+SELECT * FROM E;
+```
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
