--- a/Oracle/11. Constraint.md
+++ b/Oracle/11. Constraint.md
@@ -91,10 +91,15 @@ CREATE TABLE EMP_FK(
 ```
 ## FK 삭제시
 DEPT.DEPTNO=20 을 참조하는 EMP.DEPTNO가 있을 때 DEPT.DEPTNO=20을 지울 수 없다.
-### 열 데이터를 삭제할 때 이 데이터를 참조하고 있는 데이터도 함께 삭제
-#### -CONSTRAINT 제약조건이름 REFERENCES 참조테이블(참조할 열) ON DELETE CASCADE
-### 열 데이터를 삭제할 때 이 데이터를 참조하고 있는 데이터를 NULL로
-#### -CONSTRAINT 제약조건이름 REFERENCES 참조테이블(참조할 열) ON DELETE SET NULL
+|열 데이터를 삭제할 때 이 데이터를 참조하고 있는 데이터도 함께 삭제|
+|--|
+
+|CONSTRAINT 제약조건이름 REFERENCES 참조테이블(참조할 열) ON DELETE CASCADE|
+
+
+|열 데이터를 삭제할 때 이 데이터를 참조하고 있는 데이터를 NULL로|
+|--|
+|CONSTRAINT 제약조건이름 REFERENCES 참조테이블(참조할 열) ON DELETE SET NULL|
 
 
 
