--- a/Oracle/14. WINDOW_FNC.MD
+++ b/Oracle/14. WINDOW_FNC.MD
@@ -3,4 +3,16 @@
 WINDOW 함수에는 OVER 문구가 필수로 포함된다.
 ```
 
-1. RANK 함수
+# 1. RANK 함수
+```SQL
+SELECT JOB, EMPNO,ENAME, SAL
+    ,RANK() OVER(ORDER BY SAL DESC) ALL_RANK
+    ,RANK() OVER(PARTITION BY JOB ORDER BY SAL DESC) JOB_RANK
+    ,DENSE_RANK() OVER(ORDER BY SAL DESC) DENSE_RANK --순위가 이어짐
+    ,ROWNUM -- ROW_NUMBER과 헷갈리지 말라고
+    ,ROW_NUMBER() OVER(ORDER BY SAL DESC) ROW_NUMBER
+    FROM EMP;
+```
+
+
+# 2. SUM 함수
