--- a/Oracle/14. WINDOW_FNC.MD
+++ b/Oracle/14. WINDOW_FNC.MD
@@ -13,6 +13,19 @@ SELECT JOB, EMPNO,ENAME, SAL
     ,ROW_NUMBER() OVER(ORDER BY SAL DESC) ROW_NUMBER
     FROM EMP;
 ```
-
+<img width="578" alt="캡처1" src="https://user-images.githubusercontent.com/34879309/85657800-72568a80-b6ed-11ea-99eb-077de0037e66.PNG">
 
 # 2. SUM 함수
+```SQL
+SELECT MGR, ENAME, SAL
+    , SUM(SAL) OVER(PARTITION BY MGR) MGR_SUM
+    , SUM(SAL) OVER(PARTITION BY MGR ORDER BY SAL RANGE UNBOUNDED PRECEDING) AS MGR_SUM
+    , SUM(SAL) OVER(PARTITION BY MGR ORDER BY SAL DESC RANGE UNBOUNDED PRECEDING) AS MGR_SUM2
+    FROM EMP;
+```
+<img width="270" alt="캡처2" src="https://user-images.githubusercontent.com/34879309/85657807-74204e00-b6ed-11ea-8081-d7b715d41f95.PNG">
+
+# 3. MAX 함수
+```SQL
+
+```
