--- a/Oracle/14. WINDOW_FNC.MD
+++ b/Oracle/14. WINDOW_FNC.MD
@@ -27,5 +27,21 @@ SELECT MGR, ENAME, SAL
 
 # 3. MAX 함수
 ```SQL
-
+SELECT MGR, ENAME, SAL
+    , MAX(SAL) OVER(PARTITION BY MGR) AS MGR_MAX
+    , MIN(SAL) OVER(PARTITION BY MGR) AS MGR_MIN
+    FROM EMP;
 ```
+<img width="201" alt="캡처3" src="https://user-images.githubusercontent.com/34879309/85673517-ee0d0300-b6fe-11ea-8b7a-8fd50de0fcb4.PNG">
+
+```SQL
+SELECT MGR, ENAME, SAL
+    FROM (
+        SELECT MGR, ENAME, SAL
+            , MAX(SAL) OVER(PARTITION BY MGR) AS MGR_MAX
+            FROM EMP
+    ) MAXDF
+    WHERE SAL = MAXDF.MGR_MAX
+```
+<img width="103" alt="캡처4" src="https://user-images.githubusercontent.com/34879309/85673518-eea59980-b6fe-11ea-8229-a437f993e3ab.PNG">
+
