--- a/Oracle/14. WINDOW_FNC.MD
+++ b/Oracle/14. WINDOW_FNC.MD
@@ -45,3 +45,12 @@ SELECT MGR, ENAME, SAL
 ```
 <img width="103" alt="캡처4" src="https://user-images.githubusercontent.com/34879309/85673518-eea59980-b6fe-11ea-8229-a437f993e3ab.PNG">
 
+```SQL
+--MGR별 자기 포함 위+아래 사원의 평균
+SELECT MGR, ENAME, HIREDATE, SAL
+    , ROUND(AVG(SAL) OVER(PARTITION BY MGR ORDER BY HIREDATE 
+                       ROWS BETWEEN 1 PRECEDING AND 1 FOLLOWING)) AS MGR_AVG
+    FROM EMP;
+```
+<img width="228" alt="캡처5" src="https://user-images.githubusercontent.com/34879309/85674282-b2266d80-b6ff-11ea-94e8-e573284508ee.PNG">
+
