--- a/Oracle/14. WINDOW_FNC.MD
+++ b/Oracle/14. WINDOW_FNC.MD
@@ -45,6 +45,8 @@ SELECT MGR, ENAME, SAL
 ```
 <img width="103" alt="캡처4" src="https://user-images.githubusercontent.com/34879309/85673518-eea59980-b6fe-11ea-8229-a437f993e3ab.PNG">
 
+
+# 4. AVG 함수
 ```SQL
 --MGR별 자기 포함 위+아래 사원의 평균
 SELECT MGR, ENAME, HIREDATE, SAL
