--- a/Oracle/14. WINDOW_FNC.MD
+++ b/Oracle/14. WINDOW_FNC.MD
@@ -2,6 +2,14 @@
 ```
 WINDOW 함수에는 OVER 문구가 필수로 포함된다.
 ```
+```sql
+[윈도우 함수] OVER (
+        PARTITION BY 절
+            ORDER BY 절 [ASC|DESC]
+        ROWS | RANGE
+        BETWEEN UNBOUNDED PRECEDING | n PRECEDING | CURRENT ROW
+            AND UNBOUNDED FOLLOWING | n FOLLOWING | CURRENT ROW
+```
 
 # 1. RANK 함수
 ```SQL
@@ -56,3 +64,5 @@ SELECT MGR, ENAME, HIREDATE, SAL
 ```
 <img width="228" alt="캡처5" src="https://user-images.githubusercontent.com/34879309/85674282-b2266d80-b6ff-11ea-94e8-e573284508ee.PNG">
 
+
+### rows 함수 이용법
