--- a/Oracle/14. WINDOW_FNC.MD
+++ b/Oracle/14. WINDOW_FNC.MD
@@ -9,6 +9,13 @@ WINDOW 함수에는 OVER 문구가 필수로 포함된다.
         ROWS | RANGE
         BETWEEN UNBOUNDED PRECEDING | n PRECEDING | CURRENT ROW
             AND UNBOUNDED FOLLOWING | n FOLLOWING | CURRENT ROW
+
+-- ROWS : 물리적인 ROW 단위로 행 집합을 지정한다.
+-- RANGE : 논리적인 상대번지로 행 집합을 지정한다.
+-- BETWEEN ~ AND 절 : 윈도우의 시작과 끝 위치를 지정한다.
+-- UNBOUNDED PRECEDING : PARTITION의 첫 번째 로우에서 윈도우가 시작한다.
+-- UNBOUNDED FOLLOWING : PARTITION의 마지막 로우에서 윈도우가 시작한다.
+-- CURRENT ROW : 윈도우의 시작이나 끝 위치가 현재 로우 이다.
 ```
 
 # 1. RANK 함수
