--- a/Oracle/14. WINDOW_FNC.MD
+++ b/Oracle/14. WINDOW_FNC.MD
@@ -72,4 +72,76 @@ SELECT MGR, ENAME, HIREDATE, SAL
 <img width="228" alt="캡처5" src="https://user-images.githubusercontent.com/34879309/85674282-b2266d80-b6ff-11ea-94e8-e573284508ee.PNG">
 
 
-### rows 함수 이용법
+### ROWS BETWEEN / RANGE BETWEEN INTERVAL 함수 이용법
+```SQL
+--부서별로 EMPNO순으로 이전의 급여와 현재의 급여 합계를 출력해보자
+SELECT EMPNO, ENAME, DEPTNO, SAL
+    , SUM(SAL) OVER(PARTITION BY DEPTNO ORDER BY EMPNO
+                    ROWS 1 PRECEDING 
+                    ) PRE_SUM
+    FROM EMP;
+```
+<img width="203" alt="캡처1" src="https://user-images.githubusercontent.com/34879309/85825440-3559c900-b7bd-11ea-84f8-6faf7ee98e5e.PNG">
+```SQL
+--부서별로 SAL순으로 이전의 급여와 현재의 급여 합계를 출력해보자
+SELECT EMPNO, ENAME, DEPTNO, SAL
+    , SUM(SAL) OVER(PARTITION BY DEPTNO ORDER BY SAL DESC
+                    ROWS 1 PRECEDING
+                    ) PRE_SUM
+    FROM EMP;
+```
+<img width="202" alt="캡처2" src="https://user-images.githubusercontent.com/34879309/85825442-368af600-b7bd-11ea-933d-e51b0c35227a.PNG">
+```SQL
+--부서별 첫 번째 ROW부터 마지막 ROW까지의 합과(SAL1), 
+--부서별 첫 번째 ROW부터 현재 ROW까지의 합(SAL2)
+--그리고 부서별 현재 ROW부터 마지막 ROW까지의 합(SAL3)을 출력
+SELECT EMPNO, ENAME, DEPTNO, SAL
+    , SUM(SAL) OVER(PARTITION BY DEPTNO ORDER BY DEPTNO, EMPNO
+                    ROWS BETWEEN UNBOUNDED PRECEDING
+                        AND UNBOUNDED FOLLOWING
+                    ) SAL1
+    , SUM(SAL) OVER(PARTITION BY DEPTNO ORDER BY DEPTNO, EMPNO
+                    ROWS BETWEEN UNBOUNDED PRECEDING
+                        AND CURRENT ROW
+                    ) SAL2
+    , SUM(SAL) OVER(PARTITION BY DEPTNO ORDER BY DEPTNO, EMPNO
+                    ROWS BETWEEN CURRENT ROW
+                        AND UNBOUNDED FOLLOWING
+                    ) SAL3
+    FROM EMP;
+```
+<img width="250" alt="캡처3" src="https://user-images.githubusercontent.com/34879309/85825444-37238c80-b7bd-11ea-8f02-d4ff72123db1.PNG">
+```SQL
+-- RANGE / INTERVAL 이용
+-- 직전 3개월, 이후 3개월 AMT 합계
+WITH test AS
+(
+SELECT '200801' yyyymm, 100 amt FROM dual
+UNION ALL SELECT '200802', 200 FROM dual
+UNION ALL SELECT '200803', 300 FROM dual
+UNION ALL SELECT '200804', 400 FROM dual
+UNION ALL SELECT '200805', 500 FROM dual
+UNION ALL SELECT '200806', 600 FROM dual
+UNION ALL SELECT '200808', 800 FROM dual
+UNION ALL SELECT '200809', 900 FROM dual
+UNION ALL SELECT '200810', 100 FROM dual
+UNION ALL SELECT '200811', 200 FROM dual
+UNION ALL SELECT '200812', 300 FROM dual
+)
+SELECT YYYYMM, AMT
+    , SUM(AMT) OVER(ORDER BY TO_DATE(YYYYMM,'YYYYMM')
+                    RANGE BETWEEN INTERVAL '3' MONTH PRECEDING
+                        AND INTERVAL '1' MONTH PRECEDING
+                    ) AMT_PRE3
+    , SUM(AMT) OVER(ORDER BY TO_DATE(YYYYMM,'YYYYMM')
+                    RANGE BETWEEN INTERVAL '1'MONTH FOLLOWING
+                        AND INTERVAL '3' MONTH FOLLOWING
+                    ) AMT_FOL3
+    , SUM(AMT) OVER(ORDER BY TO_DATE(YYYYMM,'YYYYMM')
+                    RANGE BETWEEN INTERVAL '1' MONTH PRECEDING
+                        AND INTERVAL '1' MONTH FOLLOWING
+                    ) AMT_3MONTH
+    FROM TEST;
+```
+<img width="251" alt="캡처4" src="https://user-images.githubusercontent.com/34879309/85825446-37bc2300-b7bd-11ea-81bc-260adb90044f.PNG">
+
