--- a/Oracle/14. WINDOW_FNC.MD
+++ b/Oracle/14. WINDOW_FNC.MD
@@ -148,3 +148,58 @@ SELECT YYYYMM, AMT
 ```
 <img width="251" alt="캡처4" src="https://user-images.githubusercontent.com/34879309/85825446-37bc2300-b7bd-11ea-81bc-260adb90044f.PNG">
 
+
+# COUNT 함수
+```SQL
+-- 각 SAL을 기준으로 그것보다 50이내로 작고 150이내로 큰게 몇개인가
+SELECT ENAME, DEPTNO,SAL
+    , COUNT(*) OVER(ORDER BY SAL RANGE BETWEEN 50 PRECEDING AND 150 FOLLOWING) AS SIM_CNT
+    FROM EMP;
+```
+<img width="167" alt="캡처1" src="https://user-images.githubusercontent.com/34879309/85831182-dd28c400-b7c8-11ea-8873-17b362ca8271.PNG">
+
+
+# FIRST_VALUE
+```SQL
+
+```
+
+
+# LAST_VALUE
+```SQL
+
+```
+
+# LAG
+```SQL
+
+```
+
+# LEAD
+```SQL
+
+```
+
+# RATIO_TO_REPORT
+```SQL
+
+```
+
+
+# PERCENT_RANK
+```SQL
+
+```
+
+
+
+# CUME_DIST
+```SQL
+
+```
+
+
+# NTILE
+``` SQL
+
+```
