--- a/Oracle/14. WINDOW_FNC.MD
+++ b/Oracle/14. WINDOW_FNC.MD
@@ -159,21 +159,49 @@ SELECT ENAME, DEPTNO,SAL
 <img width="167" alt="캡처1" src="https://user-images.githubusercontent.com/34879309/85831182-dd28c400-b7c8-11ea-8873-17b362ca8271.PNG">
 
 
-# FIRST_VALUE
+# FIRST_VALUE / LAST_VALUE
 ```SQL
-
+SELECT DEPTNO, ENAME, SAL
+    , FIRST_VALUE(ENAME) OVER(PARTITION BY DEPTNO ORDER BY SAL DESC
+                              ROWS UNBOUNDED PRECEDING -- EMP 데이터에서 동일한 SAL에서 SCOTT이 위에 있기 때문에. 이 문구를 빼면 아래 있던 FORD가 위로 와서 FORD가 출력됨 
+                            ) AS DEPT_RICH
+    FROM EMP;
 ```
+<img width="176" alt="1" src="https://user-images.githubusercontent.com/34879309/85835101-735fe880-b7cf-11ea-85f0-ebc135bf9992.PNG">
 
-
-# LAST_VALUE
+#### 위아래를 합치면 ENAME이 통일 되어야 하기 때문에 위의 문장이 결과가 바뀌어 나타난다.
 ```SQL
-
+SELECT DEPTNO, ENAME, SAL
+    , FIRST_VALUE(ENAME) OVER(PARTITION BY DEPTNO ORDER BY SAL DESC, ENAME ASC
+                              ROWS UNBOUNDED PRECEDING
+                              ) AS RICH_EMP
+    , LAST_VALUE(ENAME) OVER(PARTITION BY DEPTNO ORDER BY SAL DESC, ENAME ASC
+                             ROWS UNBOUNDED PRECEDING  -- 틀릴수밖에 없네
+                            ) AS POOR_EMP
+    , LAST_VALUE(ENAME) OVER(PARTITION BY DEPTNO ORDER BY SAL DESC, ENAME ASC
+                             ROWS BETWEEN CURRENT ROW AND UNBOUNDED FOLLOWING
+                            ) AS POOR_EMP2
+    FROM EMP;
 ```
+<img width="280" alt="2" src="https://user-images.githubusercontent.com/34879309/85835106-74911580-b7cf-11ea-8cab-f453a69da4cc.PNG">
+
 
 # LAG
 ```SQL
-
+-- 입사일자가 내 전 사람인 사람의 SAL 조회
+SELECT ENAME, HIREDATE, SAL
+    ,LAG(SAL,1) OVER(ORDER BY HIREDATE) AS PREV_SAL
+    ,LAG(SAL,1,0) OVER(ORDER BY HIREDATE) AS PREV_SAL
+  FROM EMP
+  WHERE JOB='SALESMAN';
+  
+SELECT ENAME, HIREDATE,JOB, SAL
+    ,LAG(SAL,1) OVER(PARTITION BY JOB ORDER BY HIREDATE) AS PREV_SAL
+  FROM EMP
+  
 ```
+<img width="320" alt="3" src="https://user-images.githubusercontent.com/34879309/85835525-2c262780-b7d0-11ea-9258-44fc4565fbc8.PNG">
+
 
 # LEAD
 ```SQL
