--- a/Oracle/14. WINDOW_FNC.MD
+++ b/Oracle/14. WINDOW_FNC.MD
@@ -194,7 +194,10 @@ SELECT ENAME, HIREDATE, SAL
     ,LAG(SAL,1,0) OVER(ORDER BY HIREDATE) AS PREV_SAL
   FROM EMP
   WHERE JOB='SALESMAN';
-  
+```
+<img width="246" alt="3" src="https://user-images.githubusercontent.com/34879309/85835965-da31d180-b7d0-11ea-8059-100561575573.PNG">
+
+```SQL
 SELECT ENAME, HIREDATE,JOB, SAL
     ,LAG(SAL,1) OVER(PARTITION BY JOB ORDER BY HIREDATE) AS PREV_SAL
   FROM EMP
