--- a/Oracle/14. WINDOW_FNC.MD
+++ b/Oracle/14. WINDOW_FNC.MD
@@ -208,29 +208,50 @@ SELECT ENAME, HIREDATE,JOB, SAL
 
 # LEAD
 ```SQL
-
+SELECT ENAME, HIREDATE
+    ,LEAD(HIREDATE,1) OVER(ORDER BY HIREDATE) AS NEXT
+    FROM EMP;
 ```
+<img width="166" alt="1" src="https://user-images.githubusercontent.com/34879309/85859945-ecc00100-b7f8-11ea-92c0-bfd522e60b2d.PNG">
+
 
 # RATIO_TO_REPORT
 ```SQL
-
+-- 파티션 내 행별 칼럼 값의 백분율
+SELECT DEPTNO,ENAME, SAL
+    ,ROUND(RATIO_TO_REPORT(SAL) OVER(),3) AS R_R
+    ,RATIO_TO_REPORT(SAL) OVER(PARTITION BY DEPTNO) DEPT_RR
+    FROM EMP
+  ORDER BY DEPTNO, SAL DESC;
 ```
-
+<img width="247" alt="1" src="https://user-images.githubusercontent.com/34879309/85861406-445f6c00-b7fb-11ea-9fb5-0133ad835f55.PNG">
 
 # PERCENT_RANK
 ```SQL
-
+-- 파티션별 윈도우에서 퍼센타일을 나타낸다
+SELECT DEPTNO, ENAME, SAL
+    , PERCENT_RANK() OVER(PARTITION BY DEPTNO ORDER BY SAL DESC) AS P_R
+    FROM EMP;
 ```
+<img width="146" alt="1" src="https://user-images.githubusercontent.com/34879309/85863149-b5078800-b7fd-11ea-8d2a-d4d01069b1d4.PNG">
 
 
 
 # CUME_DIST
 ```SQL
-
+-- 파티션별 윈도우의 전체건수에서 현재 행보다 작거나 같은 건수에 대한 누적백분율을 구한다.
+SELECT DEPTNO, ENAME, SAL
+    , CUM_DIST() OVER(PARTITION BY DEPTNO ORDER BY SAL DESC) AS CUME_DIST
+    FROM EMP;
 ```
+<img width="147" alt="1" src="https://user-images.githubusercontent.com/34879309/85863344-fbf57d80-b7fd-11ea-93d8-acb81b6ff584.PNG">
 
 
 # NTILE
 ``` SQL
-
+-- 파티션별 전체 건수를 ARGUMENT 값으로 N등분한 결과를 구할 수 있다.
+SELECT ENAME, SAL
+    , NTILE(4) OVER(ORDER BY SAL DESC) AS QUAR_TILE
+    FROM EMP;
 ```
+<img width="135" alt="1" src="https://user-images.githubusercontent.com/34879309/85863729-8807a500-b7fe-11ea-824a-d5f71cabc0c4.PNG">
