--- a/gurubee/024_QUIZ 5일 연속 결석여부 구하기.MD
+++ b/gurubee/024_QUIZ 5일 연속 결석여부 구하기.MD
@@ -2,7 +2,56 @@
 
 ----
 
-```SQL
+```내 풀이```
 
+```SQL
+-- 그룹별로 묶기 1이 새로운 그룹의 시작을 뜻함
+SELECT ID, DT, ST
+      ,DECODE(LAG(ST) OVER(PARTITION BY ID ORDER BY DT),ST,0,1) GRP
+      FROM T
+      ORDER BY ID, DT
+```
+
+
+```SQL
+-- 그룹 구분. 누적 합을 이용하면 그룹을 알 수 있다.
+SELECT ID, DT, ST
+      ,SUM(GRP) OVER(PARTITION BY ID ORDER BY DT) GRP
+    FROM(SELECT ID, DT, ST
+          ,DECODE(LAG(ST) OVER(PARTITION BY ID ORDER BY DT),ST,0,1) GRP
+          FROM T
+          ORDER BY ID, DT
+        )
+```
+
+```SQL
+SELECT ID, COUNT(GRP) OVER(PARTITION BY ID,GRP ORDER BY DT 
+                      ROWS BETWEEN UNBOUNDED PRECEDING AND UNBOUNDED FOLLOWING)CNT
+            FROM(SELECT ID, DT, ST
+                      ,SUM(GRP) OVER(PARTITION BY ID ORDER BY DT) GRP
+                    FROM(SELECT ID, DT, ST
+                          ,DECODE(LAG(ST) OVER(PARTITION BY ID ORDER BY DT),ST,0,1) GRP
+                          FROM T   
+                        )
+                )
+      ORDER BY ID
+```
+
+
+
+```SQL
+SELECT ID, CASE WHEN MAX(CNT)>=5 THEN 'Y' ELSE 'N' END RESULT
+    FROM(SELECT ID, COUNT(GRP) OVER(PARTITION BY ID,GRP ORDER BY DT 
+                      ROWS BETWEEN UNBOUNDED PRECEDING AND UNBOUNDED FOLLOWING)CNT
+            FROM(SELECT ID, DT, ST
+                      ,SUM(GRP) OVER(PARTITION BY ID ORDER BY DT) GRP
+                    FROM(SELECT ID, DT, ST
+                          ,DECODE(LAG(ST) OVER(PARTITION BY ID ORDER BY DT),ST,0,1) GRP
+                          FROM T   
+                        )
+                )
+            ORDER BY ID
+    )
+    GROUP BY ID
 
 ```
