--- a/gurubee/024_QUIZ 5일 연속 결석여부 구하기.MD
+++ b/gurubee/024_QUIZ 5일 연속 결석여부 구하기.MD
@@ -24,6 +24,8 @@ SELECT ID, DT, ST
         )
 ```
 
+
+
 ```SQL
 SELECT ID, COUNT(GRP) OVER(PARTITION BY ID,GRP ORDER BY DT 
                       ROWS BETWEEN UNBOUNDED PRECEDING AND UNBOUNDED FOLLOWING)CNT
@@ -36,7 +38,6 @@ SELECT ID, COUNT(GRP) OVER(PARTITION BY ID,GRP ORDER BY DT
                 )
       ORDER BY ID
 ```
-
 
 
 ```SQL
@@ -53,5 +54,8 @@ SELECT ID, CASE WHEN MAX(CNT)>=5 THEN 'Y' ELSE 'N' END RESULT
             ORDER BY ID
     )
     GROUP BY ID
-
 ```
+
+|1단계|2단계|3단계|4단계|
+|----|----|----|----|
+|<img width="118" alt="1" src="https://user-images.githubusercontent.com/34879309/86591376-7081a680-bfcc-11ea-9820-9a1951caf045.PNG">|<img width="115" alt="2" src="https://user-images.githubusercontent.com/34879309/86591378-711a3d00-bfcc-11ea-9582-798ede03a3ce.PNG">|<img width="56" alt="3" src="https://user-images.githubusercontent.com/34879309/86591379-71b2d380-bfcc-11ea-929e-718bf7208de1.PNG">|<img width="70" alt="4" src="https://user-images.githubusercontent.com/34879309/86591381-71b2d380-bfcc-11ea-8deb-7d98e945d4ab.PNG">|
