Update 024_QUIZ 5일 연속 결석여부 구하기.MD

--- a/gurubee/024_QUIZ 5일 연속 결석여부 구하기.MD
+++ b/gurubee/024_QUIZ 5일 연속 결석여부 구하기.MD
@@ -59,3 +59,21 @@ SELECT ID, CASE WHEN MAX(CNT)>=5 THEN 'Y' ELSE 'N' END RESULT
 |1단계|2단계|3단계|4단계|
 |----|----|----|----|
 |<img width="118" alt="1" src="https://user-images.githubusercontent.com/34879309/86591376-7081a680-bfcc-11ea-9820-9a1951caf045.PNG">|<img width="115" alt="2" src="https://user-images.githubusercontent.com/34879309/86591378-711a3d00-bfcc-11ea-9582-798ede03a3ce.PNG">|<img width="56" alt="3" src="https://user-images.githubusercontent.com/34879309/86591379-71b2d380-bfcc-11ea-929e-718bf7208de1.PNG">|<img width="70" alt="4" src="https://user-images.githubusercontent.com/34879309/86591381-71b2d380-bfcc-11ea-8deb-7d98e945d4ab.PNG">|
+
+
+
+
+답
+
+```SQL
+SELECT id
+     , LISTAGG(st) WITHIN GROUP(ORDER BY dt) yn
+  FROM t
+ GROUP BY id
+ ORDER BY id
+;
+```
+
+<img width="91" alt="1" src="https://user-images.githubusercontent.com/34879309/86592465-8001ef00-bfce-11ea-89e8-d9efbebffc1b.PNG">
+<img width="48" alt="2" src="https://user-images.githubusercontent.com/34879309/86592466-809a8580-bfce-11ea-883f-d1693666a910.PNG">
+
