Update 024_QUIZ 5일 연속 결석여부 구하기.MD

--- a/gurubee/024_QUIZ 5일 연속 결석여부 구하기.MD
+++ b/gurubee/024_QUIZ 5일 연속 결석여부 구하기.MD
@@ -75,5 +75,13 @@ SELECT id
 ```
 
 <img width="91" alt="1" src="https://user-images.githubusercontent.com/34879309/86592465-8001ef00-bfce-11ea-89e8-d9efbebffc1b.PNG">
+
+```SQL
+SELECT ID
+      ,CASE WHEN LISTAGG(ST) WITHIN GROUP(ORDER BY DT) LIKE '%22222%' THEN 'Y' ELSE 'N' END YN
+    FROM T
+  GROUP BY ID
+  ORDER BY ID;
+```
 <img width="48" alt="2" src="https://user-images.githubusercontent.com/34879309/86592466-809a8580-bfce-11ea-883f-d1693666a910.PNG">
 
