--- a/Oracle/문법 정리.MD
+++ b/Oracle/문법 정리.MD
@@ -1,5 +1,24 @@
 # 목차
 ```
 1. 피봇/언피봇 PIVOT/UNPIVOT
-2. 
+2. 계층
+```
+
+
+### 1. 피봇/언피봇 PIVOT/UNPIVOT
+```SQL
+
+```
+
+
+
+### 2. 계층
+```SQL
+SELECT
+    LEVEL,
+    PRIOR COLNAME,
+    SYS_CONNCECT_BY_PATH(COLNAME,'SEP')
+  FROM T
+ START WITH COL IS NULL
+ CONNECT BY PRIOR SON=MOM;
 ```
