--- a/Oracle/문법 정리.MD
+++ b/Oracle/문법 정리.MD
@@ -2,6 +2,7 @@
 ```
 1. 피봇/언피봇 PIVOT/UNPIVOT
 2. 계층
+3. TRANSLATE
 ```
 
 
@@ -22,3 +23,18 @@ SELECT
  START WITH COL IS NULL
  CONNECT BY PRIOR SON=MOM;
 ```
+
+
+### 3. TRANSLATE
+```SQL
+SELECT
+    TRANSLATE(
+    '바꿀대상',
+    '대상문자',
+    '바꿀문자'
+    )
+    FROM T
+```
+
+
+
