--- a/Oracle/문법 정리.MD
+++ b/Oracle/문법 정리.MD
@@ -22,6 +22,12 @@ SELECT
   FROM T
  START WITH COL IS NULL
  CONNECT BY PRIOR SON=MOM;
+ 
+ 
+SELECT SUBSTR(SYS_CONNECT_BY_PATH(CODE,'-'),2) CODE
+    FROM TEST
+  CONNECT BY NOCYCLE PRIOR CODE != CODE
+  ORDER BY LEVEL, CODE;
 ```
 
 
