--- a/Oracle/문법 정리.MD
+++ b/Oracle/문법 정리.MD
@@ -3,6 +3,7 @@
 1. 피봇/언피봇 PIVOT/UNPIVOT
 2. 계층
 3. TRANSLATE
+4. LEFT OUTER JOIN PARTITION
 ```
 
 
@@ -42,5 +43,11 @@ SELECT
     FROM T
 ```
 
-
-
+### 4. LEFT OUTER JOIN PARTITION
+```SQL
+SELECT 집계()
+    FROM T1
+  LEFT OUTER JOIN T2
+  PARTITION BY (COL) ON T1.COL1=T2.COL2
+ GROUP BY
+```
