--- a/Oracle/문법 정리.MD
+++ b/Oracle/문법 정리.MD
@@ -3,7 +3,7 @@
 1. 피봇/언피봇 PIVOT/UNPIVOT
 2. 계층
 3. TRANSLATE
-4. LEFT OUTER JOIN PARTITION
+4. LEFT OUTER JOIN PARTITION BY
 ```
 
 
@@ -43,7 +43,7 @@ SELECT
     FROM T
 ```
 
-### 4. LEFT OUTER JOIN PARTITION
+### 4. LEFT OUTER JOIN PARTITION BY
 ```SQL
 SELECT 집계()
     FROM T1
