--- a/Oracle/문법 정리.MD
+++ b/Oracle/문법 정리.MD
@@ -9,7 +9,21 @@
 
 ### 1. 피봇/언피봇 PIVOT/UNPIVOT
 ```SQL
-
+WITH t AS
+(
+SELECT CHR(LEVEL + 64) c
+     , LEVEL v
+  FROM dual
+CONNECT BY LEVEL <= 26
+)
+SELECT *
+    FROM(SELECT *
+            FROM(SELECT C, TO_CHAR(V) V, CEIL(V/7) GB1, MOD(V-1,7)+1 GB3
+                    FROM T
+            ) UNPIVOT(V FOR GB2 IN (C AS 1, V AS 2))
+    )PIVOT(MIN(V) FOR GB3 IN (1 V1, 2 V2, 3 V3, 4 V4, 5 V5,6 V6, 7 V7))
+ORDER BY 1,2
+;
 ```
 
 
